--- a/Tarea AJAX/server/package.json
+++ b/Tarea AJAX/server/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.6",
     "@types/mysql": "^2.15.21",
     "typescript": "^5.2.2"
   },
@@ -19,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1"
   }
 }
